sorted paragraphs and headings

--- a/play.html
+++ b/play.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Welcome</title>
-    </head>
+
+<head>
+    <title>Welcome</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
 
-<h1>Produced by Sravani</h1>
+    <h1>Produced by Sravani Nalla</h1>
+    <h2>Tartuffe </h2>
+    <h4>ACT I</h4>
+
+       <b> SCENE I</b><br><br>
+        Madame Pernelle and her servant--<span class="desc"> Flipote, Elmire, Mariane, Dorine, Damis, Cleante</span><br>
+
+        <h6>PERNELLE</h6>
+         Let's go, Flipote, let's go. I hate this place.
+        <H6>Elmire.</H6>
+        I can't keep up, you rush at such a pace.
 
 
+        <h6>PERNELLE</h6>
+        <span class="direction">[He begins to leave.]</span>
+        <P>Peace, my dear, peace; come no farther.
+        I don't wish to cause you any bother.</P>
+
+        <h6>ELMIRE</h6>
+        <P> What duty demands, I insist on giving.
+        But, mother, what has caused your hasty leaving?</P>
+
+
+        <h6>PERNELLE</h6>
+        <p> I just can't stand the way your household runs . . .
+        And no one cares what I wish to have done.
+        Oh, yes, I leave your household quite dissatisfied
+        For all my wise advice has been defied . . .
+        And nobody respects me, and everybody shouts,
+        And truly this is a home for the king of louts!
+        Dorine. If . . .</p>
+
+        <h6>PERNELLE</h6> 
+        <p>You, my dearie, are a bold lassy,
+        A little brazen and very sassy,
+        You butt into everything to speak your mind.
+        Damis.</p>
 </body>
+
 </html>
