sorted paragraphs and headings 2

--- a/play.html
+++ b/play.html
@@ -17,7 +17,7 @@
 
         <h6>PERNELLE</h6>
          Let's go, Flipote, let's go. I hate this place.
-        <H6>Elmire.</H6>
+        <H6>ELMIRE</H6>
         I can't keep up, you rush at such a pace.
 
 
