added styles to headings

--- a/play.html
+++ b/play.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Welcome</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="moliere.css">
 </head>
 
 <body>
@@ -15,23 +15,23 @@
        <b> SCENE I</b><br><br>
         Madame Pernelle and her servant--<span class="desc"> Flipote, Elmire, Mariane, Dorine, Damis, Cleante</span><br>
 
-        <h6>PERNELLE</h6>
+        <h6 class="name PERNELLE">PERNELLE</h6>
          Let's go, Flipote, let's go. I hate this place.
-        <H6>ELMIRE</H6>
+        <h6 class="name ELMIRE">ELMIRE</h6>
         I can't keep up, you rush at such a pace.
 
 
-        <h6>PERNELLE</h6>
+        <h6 class="name PERNELLE">PERNELLE</h6>
         <span class="direction">[He begins to leave.]</span>
         <P>Peace, my dear, peace; come no farther.
         I don't wish to cause you any bother.</P>
 
-        <h6>ELMIRE</h6>
+        <h6 class="name ELMIRE">ELMIRE</h6>
         <P> What duty demands, I insist on giving.
         But, mother, what has caused your hasty leaving?</P>
 
 
-        <h6>PERNELLE</h6>
+        <h6 class="name PERNELLE">PERNELLE</h6>
         <p> I just can't stand the way your household runs . . .
         And no one cares what I wish to have done.
         Oh, yes, I leave your household quite dissatisfied
@@ -40,7 +40,7 @@
         And truly this is a home for the king of louts!
         Dorine. If . . .</p>
 
-        <h6>PERNELLE</h6> 
+        <h6 class="name PERNELLE">PERNELLE</h6> 
         <p>You, my dearie, are a bold lassy,
         A little brazen and very sassy,
         You butt into everything to speak your mind.
