--- a/play.html
+++ b/play.html
@@ -45,6 +45,19 @@
         A little brazen and very sassy,
         You butt into everything to speak your mind.
         Damis.</p>
+
+        <h6 class="name CLITANDRE">CLITANDRE</h6>
+        <P> What duty demands, I insist on giving.
+        But, mother, what has caused your hasty leaving?</P>
+
+
+        <table>
+            <tr><th>Character</th><th>Actor</th><th>Offer</th></tr>
+            <tr><td>PERNELLE</td><td>arnoldo</td><td>$15,000,000</td></tr>
+            <tr><td>ELMIRE</td><td>sean paul</td><td>$5,000,000</td></tr>
+            <tr><td>CLITANDRE</td><td>Rocky Reddy</td><td>$10,000,000</td></tr>
+           </table><br>
+
 </body>
 
 </html>
