--- a/play.html
+++ b/play.html
@@ -56,7 +56,9 @@
             <tr><td>PERNELLE</td><td>arnoldo</td><td>$15,000,000</td></tr>
             <tr><td>ELMIRE</td><td>sean paul</td><td>$5,000,000</td></tr>
             <tr><td>CLITANDRE</td><td>Rocky Reddy</td><td>$10,000,000</td></tr>
-           </table><br>
+           </table><br><br>
+
+           <a href="play2.html">Goto Play2</a>
 
 </body>
 
