--- a/play2.html
+++ b/play2.html
@@ -32,7 +32,10 @@
     <P> What duty demands, I insist on giving.
     But, mother, what has caused your hasty leaving?</P>
 
+    
+
     <a href="play.html">Goto Play</a>
+    <a href="play2.html">Goto Play2</a>
     
 </body>
 </html>
